[package]
name = "color-maps"
version = "0.1.0"
authors = ["MoAlyousef <may642_2000@hotmail.com>"]
edition = "2018"
description = "Defines X and HTML color maps"
repository = "https://github.com/MoAlyousef/color-maps"
documentation = "https://docs.rs/color-maps"
keywords = ["color", "colors"]
categories = ["graphics"]
readme = "README.md"
license = "MIT"

[dependencies]
lazy_static = "1.4.0"